--- a/.github/workflows/daily_digest.yml
+++ b/.github/workflows/daily_digest.yml
@@ -37,8 +37,17 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add README.md archive/
-          
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          # Only add archive/ if it exists to avoid error
+          if [ -d archive ]; then
+            git add README.md archive/
+          else
+            git add README.md
+          fi
+
           if git diff --staged --quiet; then
             echo "No new activity to commit."
           else
