--- a/.github/workflows/daily_digest.yml
+++ b/.github/workflows/daily_digest.yml
@@ -1,6 +1,17 @@
 name: Hourly Digest
 
 on:
+  push:
+      branches:
+          - "main"
+  pull_request:
+      types:
+          - synchronize
+          - opened
+          - reopened
+          - ready_for_review
+      branches:
+          - "main"
   schedule:
     # Run once every hour
     - cron: '0 * * * *'
@@ -9,9 +20,15 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
+# cancel previous workflow jobs for PRs
+concurrency:
+    group: ${{ github.workflow }}-${{ github.event.pull_request.number || "hourly-digest" }}
+    cancel-in-progress: true
+
 jobs:
   build-and-commit:
     runs-on: ubuntu-latest
+
     permissions:
       contents: write
 
@@ -23,6 +40,15 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.12'
+          cache: 'pip'
+
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
       - name: Install dependencies
         run: pip install .
@@ -32,11 +58,15 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GITHUB_REPOSITORY_OWNER: ${{ github.repository_owner }}
         run: python follower_digest_builder.py
-  
+
       - name: Commit and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          
+          # Fetch latest changes before committing to reduce conflicts
+          git fetch origin main
+          
           # Only add archive/ if it exists to avoid error
           if [ -d archive ]; then
             git add README.md archive/
@@ -49,5 +79,31 @@ jobs:
           else
             COMMIT_DATE=$(date -u +'%Y-%m-%d %H:%M')
             git commit -m "docs(activity): refresh activity @ ${COMMIT_DATE} UTC"
-            git push
+            
+            # Rebase on latest main before pushing
+            git fetch origin main
+            git rebase origin/main || {
+              echo "Rebase failed, trying merge strategy"
+              git rebase --abort 2>/dev/null || true
+              git merge origin/main --no-edit
+            }
+            
+            # Push with retry logic
+            for i in {1..3}; do
+              if git push origin main; then
+                echo "Push successful on attempt $i"
+                exit 0
+              fi
+              if [ $i -lt 3 ]; then
+                echo "Push failed, fetching and rebasing before retry..."
+                git fetch origin main
+                git rebase origin/main || {
+                  git rebase --abort 2>/dev/null || true
+                  git merge origin/main --no-edit
+                }
+                sleep $((i * 2))
+              fi
+            done
+            echo "Push failed after 3 attempts"
+            exit 1
           fi
